--- a/fw/sBMS.ioc
+++ b/fw/sBMS.ioc
@@ -18,8 +18,6 @@ FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,N
 FREERTOS.configENABLE_FPU=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
-I2C1.IPParameters=Timing
-I2C1.Timing=0x00303D5B
 KeepUserPlacement=false
 Mcu.CPN=STM32G0B1KCU6
 Mcu.Family=STM32G0
@@ -198,7 +196,7 @@ ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32G0B1KCUx
 ProjectManager.FirmwarePackage=STM32Cube FW_G0 V1.6.1
 ProjectManager.FreePins=true
-ProjectManager.HalAssertFull=true
+ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=true
@@ -217,7 +215,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=/Users/egoryakovenko/Documents/Dynamium/sBMS/fw/cubemx_postgen.sh
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-LL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_FDCAN1_Init-FDCAN1-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_I2C2_Init-I2C2-false-HAL-true,7-MX_SPI1_Init-SPI1-false-HAL-true,8-MX_SPI2_Init-SPI2-false-HAL-true,9-MX_SPI3_Init-SPI3-false-HAL-true,10-MX_TIM1_Init-TIM1-false-HAL-true,11-MX_TIM2_Init-TIM2-false-HAL-true,12-MX_RTC_Init-RTC-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_FDCAN1_Init-FDCAN1-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_I2C2_Init-I2C2-false-HAL-true,7-MX_SPI1_Init-SPI1-false-HAL-true,8-MX_SPI2_Init-SPI2-false-HAL-true,9-MX_SPI3_Init-SPI3-false-HAL-true,10-MX_TIM1_Init-TIM1-false-HAL-true,11-MX_TIM2_Init-TIM2-false-HAL-true,12-MX_RTC_Init-RTC-false-HAL-true
 RCC.ADCFreq_Value=16000000
 RCC.AHBFreq_Value=16000000
 RCC.APBFreq_Value=16000000
