renamed ChargeEnable to ChargeControl, made it PWM controlled through TIM14

--- a/fw/sBMS.ioc
+++ b/fw/sBMS.ioc
@@ -4,7 +4,7 @@ ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConv
 ADC1.NbrOfConversionFlag=1
 ADC1.Rank-0\#ChannelRegularConversion=1
 ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLINGTIME_COMMON_1
-ADC1.SelectedChannel=ADC_CHANNEL_0|ADC_CHANNEL_1|ADC_CHANNEL_2
+ADC1.SelectedChannel=ADC_CHANNEL_0|ADC_CHANNEL_1|ADC_CHANNEL_2|ADC_CHANNEL_TEMPSENSOR|ADC_CHANNEL_10
 ADC1.master=1
 CAD.formats=[]
 CAD.pinconfig=Project naming
@@ -29,6 +29,7 @@ Mcu.IP10=SPI3
 Mcu.IP11=SYS
 Mcu.IP12=TIM1
 Mcu.IP13=TIM2
+Mcu.IP14=TIM14
 Mcu.IP2=FREERTOS
 Mcu.IP3=I2C1
 Mcu.IP4=I2C2
@@ -37,7 +38,7 @@ Mcu.IP6=RCC
 Mcu.IP7=RTC
 Mcu.IP8=SPI1
 Mcu.IP9=SPI2
-Mcu.IPNb=14
+Mcu.IPNb=15
 Mcu.Name=STM32G0B1K(B-C-E)Ux
 Mcu.Package=UFQFPN32
 Mcu.Pin0=PB9
@@ -45,34 +46,37 @@ Mcu.Pin1=PC14-OSC32_IN (PC14)
 Mcu.Pin10=PA7
 Mcu.Pin11=PB0
 Mcu.Pin12=PB1
-Mcu.Pin13=PA8
-Mcu.Pin14=PA9
-Mcu.Pin15=PC6
-Mcu.Pin16=PA10
-Mcu.Pin17=PA11 [PA9]
-Mcu.Pin18=PA12 [PA10]
-Mcu.Pin19=PA13
+Mcu.Pin13=PB2
+Mcu.Pin14=PA8
+Mcu.Pin15=PA9
+Mcu.Pin16=PC6
+Mcu.Pin17=PA10
+Mcu.Pin18=PA11 [PA9]
+Mcu.Pin19=PA12 [PA10]
 Mcu.Pin2=PC15-OSC32_OUT (PC15)
-Mcu.Pin20=PA14-BOOT0
-Mcu.Pin21=PA15
-Mcu.Pin22=PB3
-Mcu.Pin23=PB4
-Mcu.Pin24=PB5
-Mcu.Pin25=PB6
-Mcu.Pin26=PB7
-Mcu.Pin27=PB8
-Mcu.Pin28=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin29=VP_RTC_VS_RTC_Activate
+Mcu.Pin20=PA13
+Mcu.Pin21=PA14-BOOT0
+Mcu.Pin22=PA15
+Mcu.Pin23=PB3
+Mcu.Pin24=PB4
+Mcu.Pin25=PB5
+Mcu.Pin26=PB6
+Mcu.Pin27=PB7
+Mcu.Pin28=PB8
+Mcu.Pin29=VP_ADC1_TempSens_Input
 Mcu.Pin3=PA0
-Mcu.Pin30=VP_SYS_VS_tim17
-Mcu.Pin31=VP_SYS_VS_DBSignals
+Mcu.Pin30=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin31=VP_RTC_VS_RTC_Activate
+Mcu.Pin32=VP_SYS_VS_tim17
+Mcu.Pin33=VP_SYS_VS_DBSignals
+Mcu.Pin34=VP_TIM14_VS_ClockSourceINT
 Mcu.Pin4=PA1
 Mcu.Pin5=PA2
 Mcu.Pin6=PA3
 Mcu.Pin7=PA4
 Mcu.Pin8=PA5
 Mcu.Pin9=PA6
-Mcu.PinsNb=32
+Mcu.PinsNb=35
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G0B1KCUx
@@ -151,9 +155,14 @@ PB0.GPIO_Label=BalanceEnable
 PB0.Locked=true
 PB0.Signal=GPIO_Output
 PB1.GPIOParameters=GPIO_Label
-PB1.GPIO_Label=ChargeEnable
+PB1.GPIO_Label=ChargeControl
 PB1.Locked=true
-PB1.Signal=GPIO_Output
+PB1.Signal=S_TIM14_CH1
+PB2.GPIOParameters=GPIO_Label
+PB2.GPIO_Label=ChargeInputVoltage
+PB2.Locked=true
+PB2.Mode=IN10
+PB2.Signal=ADC1_IN10
 PB3.Locked=true
 PB3.Mode=Full_Duplex_Master
 PB3.Signal=SPI3_SCK
@@ -217,7 +226,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=/Users/egoryakovenko/Documents/Dynamium/sBMS/fw/cubemx_postgen.sh
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_FDCAN1_Init-FDCAN1-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_I2C2_Init-I2C2-false-HAL-true,7-MX_SPI1_Init-SPI1-false-HAL-true,8-MX_SPI2_Init-SPI2-false-HAL-true,9-MX_SPI3_Init-SPI3-false-HAL-true,10-MX_TIM1_Init-TIM1-false-HAL-true,11-MX_TIM2_Init-TIM2-false-HAL-true,12-MX_RTC_Init-RTC-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_FDCAN1_Init-FDCAN1-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_I2C2_Init-I2C2-false-HAL-true,7-MX_SPI1_Init-SPI1-false-HAL-true,8-MX_SPI2_Init-SPI2-false-HAL-true,9-MX_SPI3_Init-SPI3-false-HAL-true,10-MX_TIM1_Init-TIM1-false-HAL-true,11-MX_TIM2_Init-TIM2-false-HAL-true,12-MX_RTC_Init-RTC-false-HAL-true,13-MX_TIM14_Init-TIM14-false-HAL-true
 RCC.ADCFreq_Value=16000000
 RCC.AHBFreq_Value=16000000
 RCC.APBFreq_Value=16000000
@@ -258,6 +267,8 @@ RCC.USART3Freq_Value=16000000
 RCC.USBFreq_Value=48000000
 RCC.VCOInputFreq_Value=16000000
 RCC.VCOOutputFreq_Value=128000000
+SH.S_TIM14_CH1.0=TIM14_CH1,PWM Generation1 CH1
+SH.S_TIM14_CH1.ConfNb=1
 SH.S_TIM1_CH1.0=TIM1_CH1,PWM_Input_1
 SH.S_TIM1_CH1.ConfNb=1
 SH.S_TIM2_CH1_ETR.0=TIM2_CH1,PWM_Input_1
@@ -277,6 +288,10 @@ SPI3.Direction=SPI_DIRECTION_2LINES
 SPI3.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
 SPI3.Mode=SPI_MODE_MASTER
 SPI3.VirtualType=VM_MASTER
+TIM14.Channel=TIM_CHANNEL_1
+TIM14.IPParameters=Channel
+VP_ADC1_TempSens_Input.Mode=IN-TempSens
+VP_ADC1_TempSens_Input.Signal=ADC1_TempSens_Input
 VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
 VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
@@ -285,5 +300,7 @@ VP_SYS_VS_DBSignals.Mode=DisableDeadBatterySignals
 VP_SYS_VS_DBSignals.Signal=SYS_VS_DBSignals
 VP_SYS_VS_tim17.Mode=TIM17
 VP_SYS_VS_tim17.Signal=SYS_VS_tim17
+VP_TIM14_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM14_VS_ClockSourceINT.Signal=TIM14_VS_ClockSourceINT
 board=custom
 rtos.0.ip=FREERTOS
