--- a/fw/sBMS.ioc
+++ b/fw/sBMS.ioc
@@ -13,9 +13,9 @@ FDCAN1.CalculateBaudRateNominal=200000
 FDCAN1.CalculateTimeBitNominal=5000
 FDCAN1.CalculateTimeQuantumNominal=1000.0
 FDCAN1.IPParameters=CalculateTimeQuantumNominal,CalculateTimeBitNominal,CalculateBaudRateNominal
-FREERTOS.FootprintOK=false
+FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,configENABLE_FPU,FootprintOK,configTOTAL_HEAP_SIZE
-FREERTOS.Tasks01=cellMonitor,32,128,StartCellMonitorTask,Default,NULL,Dynamic,NULL,NULL;statusLED,8,128,StartStatusLEDTask,Default,NULL,Dynamic,NULL,NULL;chargeMonitor,40,128,StartChargeMonitorTask,Default,NULL,Dynamic,NULL,NULL;canHandler,24,128,StartCANHandlerTask,Default,NULL,Dynamic,NULL,NULL;currentMonitor,8,128,StartCurrentMonitorTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=cellMonitor,32,128,StartCellMonitorTask,Default,NULL,Dynamic,NULL,NULL;statusLED,8,128,StartStatusLEDTask,Default,NULL,Dynamic,NULL,NULL;chargeMonitor,40,128,StartChargeMonitorTask,Default,NULL,Dynamic,NULL,NULL;currentMonitor,8,128,StartCurrentMonitorTask,Default,NULL,Dynamic,NULL,NULL;canHandler,16,128,StartCanHandlerTask,Default,NULL,Dynamic,NULL,NULL;cyphalStatus,8,128,StartCyphalStatusTask,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configENABLE_FPU=1
 FREERTOS.configTOTAL_HEAP_SIZE=4000
 File.Version=6
